--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 body {
 background-color:#F7F9FC ;
 color: #575F7D ; 
-font-family: 'Lora', serif;
+font-family: 'Helvetica', serif;
 font-size: 16px;
-font-weight: lighter;
+font-weight: normal;
 }
 h1,h2,h3 {
 font-family: 'Roboto', sans-serif;
@@ -92,7 +92,7 @@ border-radius: 50px;
 background-color:#A629C2;
 color: white;
 padding: 15px 20px;
-border-radius: 5px;
+border-radius: 10px;
 margin: 2px;
 }
 .btn-blue:hover{
@@ -114,7 +114,7 @@ font-size: 50px;
 color: rgb(210,210,210);
 }
 .list-inline i:hover {
-color: black;
+color: blueviolet;
 }
 
 #introduction p {
